--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@pankajbhrbs/pkg-1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bundle.js",
   "scripts": {
     "dev": "rimraf dist && cross-env NODE_ENV=production rollup --config rollup.config.dev.js --watch",
     "build": "rimraf dist && rollup src/index.js -f umd -o dist/bundle.js --name \"myBundle\""
